starting heroku set up

--- a/Day/index.html
+++ b/Day/index.html
@@ -102,7 +102,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
       <h1>Welcome to Baring Faang</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
+      <h2>A deep dive into the biggest Tech companies analytics</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -219,59 +219,73 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Services</span>
-          <h2>Services</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span> About the Companies</span>
+          <h2>Companies</h2>
+          <p>A little background about each Tech company</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-apple"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Apple</a></h4>
+              <p>founded April 1, 1976
+                Mission statement: "to bring the best personal computing products and support to students, educators,
+                designers, scientists, engineers, businessperson and consumers in over 140 countries across the world"
+                as of 2020</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up"
             data-aos-delay="150">
             <div class="icon-box">
-              <div class="icon"><i class="bx-bx-amazon"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <div class="icon"><i class="cib-amazon"></i></div>
+              <h4><a href="">Amazon</a></h4>
+              <p> founded July 5, 1994
+                Mission statement: "to serve consumers through online and physical stores and focus on selection, price
+                and convenience" as of 2020</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up"
             data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-f"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <div class="icon"><i class="  bx-bxl-facebook"></i></div>
+              <h4><a href="">Facebook</a></h4>
+              <p>
+                founded 2003, was originally founded for Harvard students but went live to the public since
+                2006. Mission statement: "give people the power to build community and bring the world
+                closer together. That reflects that we can't do this by ourselves, but only by empowering people to
+                build communities and bring people together. Our lives are all connected.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="450">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-google"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Google</a></h4>
+              <p>Google: founded September 4, 1998
+                Mission statement: "to organize the world's information and make it universally accessible and useful."
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-microsoft"></i></div>
-              <h4><a href="">Dele cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">Microsoft</a></h4>
+              <p>Microsoft: founded April 4, 1975
+                Mission statement: "to empower every person and every organization on the planet to achieve more."</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="750">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-movie"></i></div>
-              <h4><a href="">Divera don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Netflix</a></h4>
+              <p>Netflix: founded August 29, 1997
+                Mission statement: "to entertain the world". This mission statement is based on the nature of the
+                company in providing on-demand movie streaming services. </p>
             </div>
           </div>
 
